# ecommerce-brand-business-os

./: .flake8  .gitignore  CONFIGURATION.md  IMAGE_OPTIMIZATION_SUMMARY.md  METRICS_API_VERIFICATION.md  PHASE_2_DEPENDENCY_MATRIX.md  PHASE_2_PARALLEL_EXECUTION_PLAN.md  PHASE_2_TASK_BREAKDOWN.md  README.md  README_E2E_TESTING.md  SUBTASK_5-3_SUMMARY.md  SUBTASK_6-3_SUMMARY.md  TESTING_README.md  TIKTOK_SHOP_SETUP_GUIDE.md  VALIDATION.md  pyproject.toml  pytest.ini  reorganize-to-package.sh  test_citation_analysis.py  test_e2e_workflow.py  tiktok-affiliate-invitation.md  verify-config.sh  verify_citations_route.sh  verify_error_handling.sh  verify_implementation.py  verify_models.sh  verify_rate_limiter.sh  verify_tiktok_agent.sh
.auto-claude/roadmap/: competitor_analysis.json  graph_hints.json  project_index.json  roadmap.json  roadmap_discovery.json
.auto-claude/specs/001-centralized-agent-registry/: implementation_plan.json  requirements.json  spec.md
.auto-claude/specs/002-automatic-session-context-loading/: implementation_plan.json  requirements.json  spec.md
.github/workflows/: ci.yml
ai-content-agents/: .coverage  .env.development  .env.example  .env.production  .gitignore  API_TEST_RESULTS.md  README.md  TESTING_INSTRUCTIONS.md  VALIDATION.md  exceptions.py  generate_content.py  quick_start.py  requirements.txt  test_api_manual.sh  test_oauth_flow.py  test_product_sync.py  verify_blog_routes.sh
ai-content-agents/agents/: __init__.py  amazon_agent.py  base_agent.py  blog_agent.py  competitor_agent.py  social_agent.py  tiktok_shop_agent.py
ai-content-agents/api/: main.py  models.py
ai-content-agents/api/routes/: __init__.py  social.py
ai-content-agents/config/: __init__.py  config.py  environments.py  secrets.py
ai-content-agents/database/: __init__.py  init_db.py  models.py  schema.sql
ai-content-agents/examples/: test_mcf_integration.py
ai-content-agents/integrations/: __init__.py
ai-content-agents/integrations/amazon_sp_api/: README.md  __init__.py  mcf_client.py  models.py
ai-content-agents/integrations/tiktok_shop/: README.md  client.py
ai-content-agents/logs/: .gitkeep
ai-content-agents/output/amazon/: aplus_Deck_Box_metadata.json  aplus_Test_Product_metadata.json  backend_keywords_Card_Binder_metadata.json  backend_keywords_Deck_Box_metadata.json  backend_keywords_Test_Product_metadata.json  bullets_Card_Binder_metadata.json  bullets_Test_Product_metadata.json  description_Card_Binder_metadata.json  description_Deck_Box_metadata.json  listing_optimization_report_metadata.json  title_Test_metadata.json  title__metadata.json
ai-content-agents/output/blog/: blog_agent_20260225_220444_metadata.json  (+2 more)
ai-content-agents/tests/: __init__.py  conftest.py  test_amazon_sp_auth.py  test_api.py  test_api_blog.py  test_api_models.py  test_api_social.py  test_base_agent.py  test_blog_agent.py  test_e2e.py  test_mcf_client.py  test_social_agent.py
claude-code-os-implementation/01-executive-office/: URGENT-ACTION-CHECKLIST-DEC4.md  cash-flow-solution-dec-2025.md
claude-code-os-implementation/04-content-team/: brand-voice-guide.md  content-strategy.md
claude-code-os-implementation/06-knowledge-base/: ctrcvr-designer-guide.md
claude-code-os-implementation/07-workflows/: design-production-workflow.md  fiverr-hiring-sop.md
claude-code-os-implementation/09-templates/: design-brief-template.md
claude-code-os-implementation/10-implementation-roadmap/: 12-month-automation-roadmap.md
dashboard/: .env.local.example  .prettierignore  API_MIDDLEWARE_VERIFICATION.md  AUTH_FLOW_VERIFICATION.md  CONFIG_MANAGEMENT_VERIFICATION.md  package.json
dashboard/src/: middleware.ts
docs/: API_DESIGN.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  ERROR_HANDLING.md  TESTING_GUIDE.md
tests/e2e/: welcome-sequence.test.ts
(+1058 files in other folders)
